--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-     <tr>
+    <tr>
         <h3>Combinación de columna expandida y cabecera</h3>
         <table border="1">
         <th colspan="2">Head1</th>
@@ -25,5 +25,6 @@
         <td>G</td>
         <td>H</td>
     </tr>
+</body>
 </body>
 </html>
